# python-schema-registry-client

./: .flake8  .gitignore  .travis.yml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini  wait_for_services.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump_version.yaml  docs-preview.yaml  docs-publish.yaml  publish.yaml  python-package.yml
client/: index.html
docs/: client.md  exceptions.md  faust.md  index.md  schemaregistry_server.md  schemas.md  serializer.md
exceptions/: index.html
faust/: index.html
pr-preview/pr-147/: index.html
pr-preview/pr-147/client/: index.html
pr-preview/pr-147/exceptions/: index.html
pr-preview/pr-147/faust/: index.html
pr-preview/pr-147/schemaregistry_server/: index.html
pr-preview/pr-147/schemas/: index.html
pr-preview/pr-147/search/: search_index.json
pr-preview/pr-147/serializer/: index.html
pr-preview/pr-148/: 404.html
pr-preview/pr-148/exceptions/: index.html
pr-preview/pr-148/faust/: index.html
pr-preview/pr-148/schemas/: index.html
pr-preview/pr-148/serializer/: index.html
pr-preview/pr-157/: objects.inv
pr-preview/pr-157/client/: index.html
pr-preview/pr-157/schemas/: index.html
pr-preview/pr-157/serializer/: index.html
pr-preview/pr-158/exceptions/: index.html
pr-preview/pr-171/: 404.html
pr-preview/pr-171/client/: index.html
pr-preview/pr-171/faust/: index.html
pr-preview/pr-171/schemas/: index.html
pr-preview/pr-178/exceptions/: index.html
pr-preview/pr-205/: index.html
pr-preview/pr-219/client/: index.html
pr-preview/pr-228/: 404.html
pr-preview/pr-235/exceptions/: index.html
pr-preview/pr-247/schemas/: index.html
pr-preview/pr-259/: 404.html  index.html
pr-preview/pr-259/faust/: index.html
pr-preview/pr-259/schemas/: index.html
pr-preview/pr-267/client/: index.html
pr-preview/pr-267/faust/: index.html
pr-preview/pr-268/client/: index.html
pr-preview/pr-268/schemaregistry_server/: index.html
pr-preview/pr-268/serializer/: index.html
pr-preview/pr-271/exceptions/: index.html
pr-preview/pr-271/schemas/: index.html
pr-preview/pr-273/serializer/: index.html
pr-preview/pr-275/: index.html
pr-preview/pr-275/client/: index.html
pr-preview/pr-282/schemaregistry_server/: index.html
pr-preview/pr-282/serializer/: index.html
pr-preview/pr-284/: 404.html  objects.inv
pr-preview/pr-284/client/: index.html
pr-preview/pr-284/exceptions/: index.html
pr-preview/pr-284/schemas/: index.html
pr-preview/pr-289/faust/: index.html
pr-preview/pr-289/serializer/: index.html
pr-preview/pr-298/client/: index.html
pr-preview/pr-298/serializer/: index.html
pr-preview/pr-300/schemaregistry_server/: index.html
pr-preview/pr-326/: 404.html
pr-preview/pr-326/schemaregistry_server/: index.html
pr-preview/pr-326/schemas/: index.html
pr-preview/pr-341/: index.html
pr-preview/pr-341/client/: index.html
pr-preview/pr-341/exceptions/: index.html
pr-preview/pr-341/schemaregistry_server/: index.html
pr-preview/pr-341/serializer/: index.html
pr-preview/pr-361/client/: index.html
pr-preview/pr-361/exceptions/: index.html
pr-preview/pr-406/: 404.html
pr-preview/pr-408/serializer/: index.html
pr-preview/pr-418/: 404.html
pr-preview/pr-418/schemas/: index.html
pr-preview/pr-418/serializer/: index.html
pr-preview/pr-419/exceptions/: index.html
pr-preview/pr-419/faust/: index.html
pr-preview/pr-430/: 404.html
pr-preview/pr-430/client/: index.html
pr-preview/pr-430/exceptions/: index.html
pr-preview/pr-430/schemaregistry_server/: index.html
pr-preview/pr-430/schemas/: index.html
pr-preview/pr-436/: index.html
schema_registry/: __init__.py
schema_registry/client/: __init__.py  auth_utils.py  client.py  errors.py  paths.py  schema.py  status.py  urls.py  utils.py
schema_registry/serializer/: __init__.py  faust_avro_serializer.py  message_serializer.py
schema_registry/serializers/: __init__.py  errors.py  faust.py  faust_serializer.py  message_serializer.py
schemaregistry/client/: __init__.py  client.py  errors.py  load.py  status.py
schemaregistry/serializer/: errors.py  faust_avro_serializer.py  message_serializer.py
schemaregistry_server/: index.html
schemas/: index.html
scripts/: README.md  clean  clean.sh  create-tag  format  install  lint  lint.sh  publish  publish.sh  run-tests  run_test  run_tests  run_tests.sh  test  test.sh  wait_for_services
serializer/: index.html
tests/: conftest.py  data_gen.py
tests/avro_schemas/: adv_schema.avsc  default_schema.avsc  invalid_schema.avsc  logical_types_schema.avsc  nested_schema.avsc  order_schema.avsc  primitive_float.avsc  user_v1.avsc  user_v2.avsc
tests/certificates/: cert.pem  key.pem
tests/client/: data_gen.py  mock_schema_registry_client.py  test_cached_client.py  test_http_client.py  test_load.py  test_mock_client.py  test_schema.py  test_schema_compatibility.py  test_schema_delete.py  test_schema_getters.py  test_schema_registration.py  test_schema_version.py  test_urls.py  test_util.py
tests/client/async_client/: test_http_client.py  test_schema.py  test_schema_compatibility.py  test_schema_delete.py  test_schema_getters.py  test_schema_registration.py  test_schema_version.py
tests/client/sync_client/: test_http_client.py  test_schema.py  test_schema_compatibility.py  test_schema_delete.py  test_schema_getters.py  test_schema_registration.py  test_schema_version.py
tests/json_schemas/: adv_schema.json  basic_schema.json  invalid_schema.json  nested_schema.json  order_schema.json  user_v1.json  user_v2.json
tests/serializer/: test_async_message_serializer.py  test_faust_serializer.py  test_faust_serializer_clean_payload.py  test_message_serializer.py
tests/server/: mock_registry.py
